--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,8 @@
 }
 
 body {
+  font-family: "Montserrat", sans-serif;
+  height: 100vh;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
     rgb(var(--background-start-rgb));
